--- a/index.html
+++ b/index.html
@@ -19,28 +19,7 @@
     <div class="wrapper">
         <div class="container">
             <h3>Калькулятор площади</h3>
-            <ul class="calcs_list">
-                <li class="calc" id="square_calc">
-                    <button class="btn_calc">
-                        <a class="link" href="square_calc.html">квадрат</a>
-                    </button>
-                </li>
-                <li class="calc" id="rectangle_calc">
-                    <button class="btn_calc">
-                        <a class="link" href="rectangle_calc.html">прямоугольник</a>
-                    </button>
-                </li>
-                <li class="calc" id="circle_calc">
-                    <button class="btn_calc">
-                        <a class="link" href="circle_calc.html">круг</a>
-                    </button>
-                </li>
-                <li class="calc" id="triangle_calc">
-                    <button class="btn_calc">
-                        <a class="link" href="triangle_calc.html">треугольник</a>
-                    </button>
-                </li>
-            </ul>
+            <textarea name="some text" id="area" cols="30" rows="10" class="text_area"></textarea>
         </div>
     </div>
     <script
