done 1 and 2 tasks

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <div class="container">
             <h3>Калькулятор площади</h3>
             <textarea name="some text" id="area" cols="30" rows="10" class="text_area"></textarea>
+            <div class="value_cont">
+                <h3 class="name_value">Количество слов:</h3>
+                <div id="value_words" class="value"></div>
+            </div>
+            <div class="value_cont">
+                <h3 class="name_value">Количество символов:</h3>
+                <div id="value_symbols" class="value"></div>
+            </div>
         </div>
     </div>
     <script
