--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="container">
             <h3>Калькулятор площади</h3>
             <textarea name="some text" id="area" cols="30" rows="10" class="text_area"></textarea>
+            <h3>Анализ текста</h3>
             <div class="value_cont">
                 <h3 class="name_value">Количество слов:</h3>
                 <div id="value_words" class="value"></div>
@@ -27,6 +28,10 @@
             <div class="value_cont">
                 <h3 class="name_value">Количество символов:</h3>
                 <div id="value_symbols" class="value"></div>
+            </div>
+            <div class="value_cont">
+                <h3 class="name_value">Количество символов без пробелов:</h3>
+                <div id="value_symbols_without" class="value"></div>
             </div>
         </div>
     </div>
