--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <h3>Калькулятор площади</h3>
             <textarea name="some text" id="area" cols="30" rows="10" class="text_area"></textarea>
-            <h3>Анализ текста</h3>
+            <h3>Анализ текста:</h3>
             <div class="value_cont">
                 <h3 class="name_value">Количество слов:</h3>
                 <div id="value_words" class="value"></div>
@@ -32,6 +32,10 @@
             <div class="value_cont">
                 <h3 class="name_value">Количество символов без пробелов:</h3>
                 <div id="value_symbols_without" class="value"></div>
+            </div>
+            <div class="value_cont">
+                <h3 class="name_value">Вхождения в алфавит:</h3>
+                <div id="alphabet"></div>
             </div>
         </div>
     </div>
