--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <title>Timeweb is here</title>
 
-    
     <link href="css/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width">
 
@@ -21,7 +20,7 @@
             <h3>Анализатор текста</h3>
             <textarea name="some text" id="area" cols="30" rows="10" class="text_area"></textarea>
             <ul class="checks">
-               <li><div> слова:</div> <div> <input class="check_inp" type="checkbox" id="check_value_words" onclick="analyzer();"></div></li>
+               <li><div> слова:</div> <div class="container_input"> <input class="check_inp" type="checkbox" id="check_value_words" onclick="analyzer();"></div></li>
                <li><div> символы:</div> <div> <input class="check_inp" type="checkbox" id="check_value_symbols" onclick="analyzer();"></div></li>
                <li><div> символы без пробелов:</div> <div><input class="check_inp" type="checkbox" id="check_value_symbols_without" onclick="analyzer();"></div></li>
                <li><div> алфавит:</div> <div> <input class="check_inp" type="checkbox" id="check_value_alphabet" onclick="analyzer();"></div></li>
