remake timer, restart funct

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             <div id="board_container">
 
             </div>
+            <button id="game_restart" onclick="Game_restart();">начать заново</button>
         </div>
     </div>
+    <div id="test"></div>
     <script
     src="https://code.jquery.com/jquery-3.6.1.js"
     integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
